@@ -15,7 +15,9 @@ o Allow -utf8 with -split-bookmarks -o @B.pdf to produce UTF8 filenames
 o -merge-add-bookmarks now works with unicode filenames
 o Better transformation of some annotation types
 o -list-annotations[-json] now respects page range
+o Merge now merges structure trees (tagged PDF)
 o Merge now rewrites clashing name tree entries
+o UTF8 option for JSON output
 
 Fixes:
 
